--- a/includes/footer.html
+++ b/includes/footer.html
@@ -3,6 +3,14 @@
 		<!-- Footer -->
 		<footer>
 			footer
+			<div>
+				<p>LUXITA - Bringing Fashion To Your Finger Tips</p>
+				<p>Hand Coded and designed with <span>♥</span> by Katherine Delorme</p>
+			</div>
+			<div>
+				<i class="fa fa-twitter fa-lg"></i>
+				<i class="fa fa-instagram fa-lg"></i>
+			</div>
 		</footer>
 		<!--footer-->
 
