--- a/includes/header.html
+++ b/includes/header.html
@@ -8,7 +8,7 @@
 			if (isset($page_title)) {
 					echo $page_title;
 			} else {
-					echo 'LUXITA - Bring....to Tokyo';
+					echo 'LUXITA - Bringing Fashion To Your Finger Tips';
 			}
 		?>
 	</title>
@@ -88,7 +88,7 @@
   <link rel="stylesheet" href="css/styles.css" type="text/css" />
   <!--fonts-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,700italic|Playfair+Display+SC' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,700italic|Playfair+Display' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
