--- a/css/styles.css
+++ b/css/styles.css
@@ -102,10 +102,7 @@ hr {
 .head {
   clear: both;
   display: block;
-  /*padding: 2% 1% 0 1%;*/
   position: absolute;
-  /*left: 0px;
-  top: 0px;*/
   z-index: 1;
   width: 100%; }
 
@@ -122,7 +119,7 @@ header ul li {
   margin: 0 2%; }
 
 header ul li a:link {
-  color: #ffffff;
+  color: #000000;
   display: inline-block;
   line-height: 54px;
   text-decoration: none; }
