--- a/includes/header.html
+++ b/includes/header.html
@@ -85,6 +85,7 @@
 	<!--stylesheets-->
   <!-- Bootstrap CSS -->
   <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.min.css" type="text/css" />
   <link rel="stylesheet" href="css/styles.css" type="text/css" />
   <!--fonts-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -92,7 +93,8 @@
 </head>
 
 <body>
-	<header class="nav-collapse head">
+<div id="fullpage">
+	<header class="head">
 		<ul>
 			<div class="logo">
 			     <li><a rel="canonical" href="#"><img src="assets/luxitaLogo.png" alt="LUXITA" /></a></li>
