--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -178,6 +178,7 @@ header ul li a{
 }
 .featuredStyle{
 	display: flex;
+	margin-top: 5%;
 }
 .featuredStyleL{
   float: left;
@@ -206,19 +207,73 @@ header ul li a{
 	/*flex-direction: column;*/
 }
 .newsletter{
-	/*background-attachment: fixed;
+	/*
   background-image: url("../assets/nailsSushi.jpg");
   background-position: center center;
   background-repeat: no-repeat;
 	background-size: 100% auto;*/
+	/*align-items: center;*/
 	background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.3)), url("../assets/nailsSushi.jpg") no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
-
+	/*display: flex;
+  justify-content: center;*/
+	text-align: center;
+	h1{
+		color: $tertiary;
+	}
 }
 
-/* ///////////// header ////////////// */
+/* ///////////// form end ////////////// */
+form{
+		margin-top: 2%;
+	div:first-of-type{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+	}
+}
+input[type="text"], input[type="email"] {
+  background: transparent;
+	border: 0;
+  border-bottom: 1px solid $tertiary;
+	box-sizing: border-box;
+	color: $tertiary;
+	display: block;
+	font-family: $font-style-secondary;
+	font-size: 1em;
+	height: 30px;
+	line-height: normal;
+	margin: 20px 0 0 0;
+	outline: 0;
+	width: 35%;
+}
+input:focus, textarea:focus {
+	background:none repeat scroll 0 0;
+	border-bottom: 1px solid $quaternary;
+	color: $quaternary;
+}
+input[type="submit"], input[type="button"], input[type="reset"] {
+	/*padding: 2% 5%;
+	margin: 0 0 1% 0;*/
+	border: none;
+	background-color: $quaternary;
+	color: $tertiary;
+	font-size: 1em;
+	font-weight: 300;
+	height: 40px;
+	margin-top: 55%;
+	text-transform: uppercase;
+}
+input[type="submit"]:hover, input[type="button"]:hover, input[type="reset"]:hover{cursor: pointer;background-color: $primary;}
+input[type="submit"]:visited{cursor: pointer;background-color: $primary;}
+input[type="submit"]:active{cursor: pointer;background-color: $primary;}
+input[type="submit"]:focus{cursor: pointer;background-color: $primary;}
+/* ///////////// form end ////////////// */
+
+/* ///////////// footer ////////////// */
 footer{
 	height: 10vh;
 }
-/* ///////////// header end ////////////// */
+/* ///////////// footer end ////////////// */
