--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -36,7 +36,10 @@ h4 {
   font-size: 1.875em;
 }
 h5 {
-
+  color: $tertiary;
+  font-family: $font-style-primary;
+  font-size: 1.5em;
+  margin-top: 2%;
 }
 h6 {
 
@@ -58,9 +61,9 @@ hr{
   background: $quaternary;
   display: inline-block;
   font-family: $font-style-secondary;
-  font-size: 1.125em;
+  font-size: 1em;
   font-weight: 300;
-  padding: 4% 5%;
+  padding: 3% 5%;
   text-transform: uppercase;
   text-align: center;
   &:link{
