add team photos, responsiveness file, minor code change

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -59,6 +59,8 @@ hr{
 }
 .btn{
   background: $quaternary;
+  border: 0;
+  border-radius: 0;
   display: inline-block;
   font-family: $font-style-secondary;
   font-size: 1em;
