--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -84,6 +84,8 @@ header ul li a{
   justify-content: space-between;
   a.btn{
     background: $quaternary;
+		border: 0;
+	  border-radius: 0;
     font-family: $font-style-secondary;
     font-size: 1.5em;
     font-weight: 300;
@@ -277,3 +279,5 @@ footer{
 	height: 10vh;
 }
 /* ///////////// footer end ////////////// */
+
+@import 'responsiveness';
