--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -73,3 +73,8 @@ hr{
     text-decoration: none;
   }
 }
+//** Bootstrap override **//
+.container-fluid {
+  padding-right: 0;
+  padding-left: 0;
+}
