--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -28,6 +28,7 @@ h3 {
   color: $primary;
   font-family: $font-style-primary;
   font-size: 2.25em;
+  margin-top: 2%;
   text-transform: capitalize;
 }
 h4 {
