--- a/css/styles.css
+++ b/css/styles.css
@@ -340,6 +340,7 @@ input[type="submit"], input[type="button"], input[type="reset"] {
   border: none;
   background-color: #000000;
   color: #ffffff;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
   font-size: 1em;
   font-weight: 300;
   height: 40px;
@@ -352,9 +353,9 @@ textarea {
   font-family: "Lato", Helvetica, Arial, sans-serif;
   font-size: 1em;
   line-height: normal;
-  margin: 25px 0 0 0;
+  margin: 40px 0 0 0;
   padding: 1%;
-  text-indent: 2%;
+  text-indent: 1%;
   width: 100%; }
 
 input[type="submit"]:hover, input[type="button"]:hover, input[type="reset"]:hover {
@@ -373,16 +374,20 @@ input[type="submit"]:focus {
   cursor: pointer;
   background-color: #bda355; }
 
-.secondaryForm input[type="text"], .secondaryForm input[type="email"] {
-  border-bottom: 1px solid #000000;
-  color: #000000; }
-.secondaryForm input:focus, .secondaryForm textarea:focus {
-  border-bottom: 1px solid #bda355;
-  color: #bda355; }
-.secondaryForm textarea {
-  border: 1px solid #000000; }
-.secondaryForm input[type="submit"], .secondaryForm input[type="button"], .secondaryForm input[type="reset"] {
-  margin-top: 5%; }
+.secondaryForm {
+  width: 80%; }
+  .secondaryForm input[type="text"], .secondaryForm input[type="email"] {
+    border-bottom: 1px solid #000000;
+    color: #000000;
+    width: 100%; }
+  .secondaryForm input:focus, .secondaryForm textarea:focus {
+    border-bottom: 1px solid #bda355;
+    color: #bda355; }
+  .secondaryForm textarea {
+    border: 1px solid #000000; }
+  .secondaryForm input[type="submit"], .secondaryForm input[type="button"], .secondaryForm input[type="reset"] {
+    margin-top: 5%;
+    padding: 2% 9%; }
 
 /* ///////////// form end ////////////// */
 /* ///////////// footer ////////////// */
@@ -390,5 +395,8 @@ footer {
   height: 10vh; }
 
 /* ///////////// footer end ////////////// */
+@media (min-width: 576px) and (max-width: 767px) {
+  .secondaryForm {
+    width: 100%; } }
 
 /*# sourceMappingURL=styles.css.map */
