--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -7,6 +7,10 @@ $quaternary: #000000; //black
 $font-style-primary: 'Playfair Display', serif;
 $font-style-secondary: 'Lato', Helvetica, Arial, sans-serif;
 
+/**:hover{
+  transition: all 280ms ease-in-out;
+}*/
+
 section{
   display: block;
   height: 100vh;
