--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,18 +1,22 @@
 			<!-- END CONTENT -->
 
 		<!-- Footer -->
-	</div>
-		<footer>
-			footer
-			<div>
-				<p>LUXITA - Bringing Fashion To Your Finger Tips</p>
-				<p>Hand Coded and designed with <span>♥</span> by Katherine Delorme</p>
-			</div>
-			<div>
-				<i class="fa fa-twitter fa-lg"></i>
-				<i class="fa fa-instagram fa-lg"></i>
-			</div>
-		</footer>
+			<footer class="basepadding middle">
+				<div class="text-center">
+					<i class="fa fa-twitter fa-lg"></i>
+					<i class="fa fa-instagram fa-lg"></i>
+				</div>
+				<div class="footerSplit">
+					<div>
+						<p>LUXITA - Bringing Fashion To Your Finger Tips</p>
+						<p>Hand Coded and designed with <span>♥</span> by Katherine Delorme</p>
+					</div>
+					<div>
+						<p>Privacy Policy     Press     Photo Rights</p>
+						<p>© 2017 LUXITA Ltd. All Rights Reserved</p>
+					</div>
+				</div>
+			</footer>
 		<!--footer-->
 
 		<!--javascript-->
@@ -25,6 +29,12 @@
 			$(document).ready(function() {
 				$('#fullpage').fullpage(
 					{
+						//Navigation
+						lockAnchors: false,
+						navigation: true,
+
+						//Scrolling
+						css3: true
 					}
 				);
 			});
