--- a/includes/header.html
+++ b/includes/header.html
@@ -96,8 +96,7 @@
 </head>
 
 <body>
-<div id="fullpage">
-	<header class="head">
+	<!--<header class="head">
 		<ul>
 			<div class="logo">
 			     <li><a rel="canonical" href="#"><img src="assets/luxitaLogo.png" alt="LUXITA" /></a></li>
@@ -109,4 +108,23 @@
 			<li><a rel="canonical" href="#">Contact</a></li>
 			</div>
 		</ul>
-	</header>
+	</header>-->
+    <header class="head">
+      <nav class="navbar navbar-expand-md">
+
+        <a class="navbar-brand logo" href="#">
+          <img src="assets/luxitaLogo.png" class="d-inline-block align-top" alt="LUXITA">
+        </a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <a class="nav-item nav-link" href="#">Nail Designs</a>
+          <a class="nav-item nav-link" href="#">Discover Ita Nails</a>
+          <a class="nav-item nav-link" href="#">About</a>
+          <a class="nav-item nav-link" href="#">Contact</a>
+        </div>
+      </nav>
+    </header>
