getting the div below the fixed header on policy. Remove reser style sheet import bootsrap uses normalize

--- a/includes/header.html
+++ b/includes/header.html
@@ -109,8 +109,8 @@
 			</div>
 		</ul>
 	</header>-->
-    <header class="head">
-      <nav class="navbar navbar-expand-md">
+  <header>
+    <nav class="navbar navbar-expand-md fixed-top">
 
         <a class="navbar-brand logo" href="#">
           <img src="assets/luxitaLogo.png" class="d-inline-block align-top" alt="LUXITA">
