--- a/css/styles.css
+++ b/css/styles.css
@@ -1,50 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline; }
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block; }
-
-body {
-  line-height: 1; }
-
-ol, ul {
-  list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
+/*@import 'reset';*/
 /**:hover{
   transition: all 280ms ease-in-out;
 }*/
@@ -181,17 +135,17 @@ header ul li a{
   .logo img {
     width: 100%; }
 
-header a {
+nav a {
   font-family: "Playfair Display", serif; }
-  header a:link {
+  nav a:link {
     color: #000000; }
-  header a:visited {
+  nav a:visited {
     color: #ffffff; }
-  header a:hover {
+  nav a:hover {
     color: #bda355; }
-  header a:active {
+  nav a:active {
     color: #bda355; }
-  header a:focus {
+  nav a:focus {
     color: #bda355; }
 
 /* ///////////// header end ////////////// */
@@ -343,6 +297,10 @@ header a {
 
 .contact {
   margin: 0 25%; }
+  .contact h1 {
+    margin-bottom: 25px; }
+  .contact p {
+    margin-bottom: 20px; }
 
 /* ///////////// form end ////////////// */
 form {
@@ -429,22 +387,24 @@ input[type="submit"]:focus {
     padding: 2% 9%; }
 
 /* ///////////// form end ////////////// */
-.policy h6 {
-  font-family: "Lato", Helvetica, Arial, sans-serif;
-  font-size: 1.3em;
-  font-weight: 700; }
-.policy p {
-  margin-top: 0;
-  margin-bottom: 15px; }
-  .policy p:first-of-type {
-    margin-top: 35px; }
-.policy ul {
-  font-family: "Lato", Helvetica, Arial, sans-serif;
-  font-size: 1.125em;
-  margin-left: 30px; }
-  .policy ul li {
-    list-style-type: disc;
-    margin-top: 10px; }
+.policy {
+  padding-top: 4.5rem; }
+  .policy h6 {
+    font-family: "Lato", Helvetica, Arial, sans-serif;
+    font-size: 1.3em;
+    font-weight: 700; }
+  .policy p {
+    margin-top: 0;
+    margin-bottom: 15px; }
+    .policy p:first-of-type {
+      margin-top: 35px; }
+  .policy ul {
+    font-family: "Lato", Helvetica, Arial, sans-serif;
+    font-size: 1.125em;
+    margin-left: 30px; }
+    .policy ul li {
+      list-style-type: disc;
+      margin-top: 10px; }
 
 /* ///////////// footer ////////////// */
 .fullpagefooter, footer {
