--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,4 @@
-@import 'reset';
+/*@import 'reset';*/
 @import 'base';
 
 
@@ -56,7 +56,7 @@ header ul li a{
   }
 }
 
-header a{
+nav a{
 	font-family: $font-style-primary;
   &:link{
   	color: $quaternary;
@@ -245,6 +245,12 @@ header a{
 
 .contact{
 	margin: 0 25%;
+	h1{
+		margin-bottom: 25px;
+	}
+	p{
+		margin-bottom: 20px;
+	}
 }
 /* ///////////// form end ////////////// */
 form{
@@ -326,6 +332,7 @@ input[type="submit"]:focus{cursor: pointer;background-color: $primary;}
 }
 /* ///////////// form end ////////////// */
 .policy{
+	padding-top: 4.5rem;
 	h6 {
 	  font-family: $font-style-secondary;
 	  font-size: 1.3em;
