--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ nav a {
   background-size: 100% auto; }
 
 .hometopContent {
-  padding-top: 15%; }
+  /*padding-top: 15%;*/ }
 
 .threeFourth {
   height: 75vh;
@@ -210,25 +210,23 @@ nav a {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 100% auto;
-  float: left;
   height: 100vh;
-  width: 30%; }
+  /*width: 30%;*/ }
 
 .seventy {
-  float: left;
   margin-top: 5%;
   min-height: 100px;
   padding-left: 5%;
   padding-right: 7%;
-  width: 58%; }
+  /*width: 58%;*/ }
 
 .textColumn {
-  -webkit-column-count: 2;
-  -moz-column-count: 2;
-  column-count: 2;
-  -webkit-column-gap: 40px;
-  -moz-column-gap: 40px;
-  column-gap: 40px;
+  	/*-webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+  	-webkit-column-gap: 40px;
+    -moz-column-gap: 40px;
+    column-gap: 40px;*/
   margin-top: 5%; }
   .textColumn p:first-of-type {
     margin-top: 0; }
@@ -246,26 +244,27 @@ nav a {
     text-align: justify; }
 
 .columnThree {
-  display: flex;
+  /*display: flex;
   flex: 1;
-  justify-content: space-between; }
-  .columnThree div {
-    width: 30%; }
+  justify-content: space-between;*/
+  /*div{
+  	width: 30%;
+  }*/ }
 
 .featuredStyle {
   display: flex;
   margin-top: 5%; }
 
 .featuredStyleL {
-  float: left;
-  padding-left: 7%;
-  width: 43%; }
+  /*float: left;
+  width: 43%;*/
+  padding-left: 7%; }
   .featuredStyleL p {
     margin-bottom: 5%; }
 
 .featuredStyleR {
-  float: left;
-  width: 50%;
+  /*float: left;
+  width: 50%;*/
   background-image: url("../assets/venuesGemsBrownLarge.jpg");
   background-position: center center;
   background-repeat: no-repeat;
@@ -388,11 +387,13 @@ input[type="submit"]:focus {
 
 /* ///////////// form end ////////////// */
 .policy {
-  padding-top: 4.5rem; }
+  padding-top: 8.5rem;
+  padding-bottom: 4rem; }
   .policy h6 {
     font-family: "Lato", Helvetica, Arial, sans-serif;
     font-size: 1.3em;
-    font-weight: 700; }
+    font-weight: 700;
+    padding-top: 15px; }
   .policy p {
     margin-top: 0;
     margin-bottom: 15px; }
@@ -421,5 +422,125 @@ input[type="submit"]:focus {
 @media (min-width: 576px) and (max-width: 767px) {
   .secondaryForm {
     width: 100%; } }
+@media (max-width: 575px) {
+  h1 {
+    font-size: 3.1em; }
+
+  .oneFourth {
+    height: auto; }
+    .oneFourth h1 {
+      font-size: 2.7em; }
+
+  .logo {
+    width: 20%; }
+
+  .hometop {
+    background-position: right center;
+    background-size: cover; }
+
+  .thirty {
+    height: 30vh;
+    background-position: center bottom; }
+
+  .seventy {
+    padding-left: 7%;
+    padding-right: 7%; }
+
+  .textColumn {
+    -webkit-column-count: 0;
+    -moz-column-count: 0;
+    column-count: 0;
+    -webkit-column-gap: 0;
+    -moz-column-gap: 0;
+    column-gap: 0; }
+
+  input[type="text"], input[type="email"] {
+    width: 100%; }
+
+  .contact {
+    margin: 0 7%; } }
+@media (min-width: 576px) {
+  .thirty {
+    height: 30vh;
+    background-position: center bottom; }
+
+  .seventy {
+    padding-left: 7%; }
+
+  .textColumn {
+    -webkit-column-count: 0;
+    -moz-column-count: 0;
+    column-count: 0;
+    -webkit-column-gap: 0;
+    -moz-column-gap: 0;
+    column-gap: 0; }
+
+  input[type="text"], input[type="email"] {
+    width: 100%; }
+
+  .contact {
+    margin: 0 7%; } }
+@media (min-width: 768px) {
+  h1 {
+    font-size: 3.8em; }
+
+  p {
+    font-size: 1em; }
+
+  .hometop {
+    background-position: right center;
+    background-size: cover; }
+
+  .thirty {
+    height: 100vh;
+    background-position: center center; }
+
+  .seventy {
+    padding-left: 5%; }
+
+  .textColumn {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    -webkit-column-gap: 40px;
+    -moz-column-gap: 40px;
+    column-gap: 40px; }
+
+  .contact {
+    margin: 0 15%; } }
+@media (min-width: 992px) {
+  h1 {
+    font-size: 3.8em; }
+
+  p {
+    font-size: 1.125em; }
+
+  .hometop {
+    background-position: center center;
+    background-size: 100% auto; }
+
+  .contact {
+    margin: 0 25%; } }
+@media (min-width: 1200px) {
+  h1 {
+    font-size: 4em; }
+
+  h2 {
+    font-size: 2.8em; }
+
+  h3 {
+    font-size: 2.25em; }
+
+  h4 {
+    font-size: 1.875em; }
+
+  h5 {
+    font-size: 1.5em; }
+
+  h6 {
+    font-size: 1.3em; }
+
+  input[type="text"], input[type="email"] {
+    width: 35%; } }
 
 /*# sourceMappingURL=styles.css.map */
