--- a/scss/_responsiveness.scss
+++ b/scss/_responsiveness.scss
@@ -3,3 +3,146 @@
   	width: 100%;
   }
 }
+
+// Extra small devices (portrait phones, less than 576px)
+// No media query since this is the default in Bootstrap
+
+// Mine, Extra Small devices
+@media (max-width: 575px) {
+  h1 {
+    font-size: 3.1em;
+  }
+  .oneFourth{
+    height: auto;
+    h1 {
+    font-size: 2.7em;
+    }
+  }
+  .logo{
+  	width: 20%;
+  }
+  .hometop{
+    background-position: right center;
+    background-size: cover;
+  }
+  .thirty{
+    height: 30vh;
+    background-position: center bottom;
+  }
+  .seventy{
+  	padding-left: 7%;
+  	padding-right: 7%;
+  }
+  .textColumn{
+  	-webkit-column-count: 0;
+    -moz-column-count: 0;
+    column-count: 0;
+  	-webkit-column-gap: 0;
+    -moz-column-gap: 0;
+    column-gap: 0;
+  }
+  input[type="text"], input[type="email"] {
+    width: 100%;
+  }
+  .contact {
+  margin: 0 7%;
+  }
+}
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .thirty{
+    height: 30vh;
+    background-position: center bottom;
+  }
+  .seventy{
+  	padding-left: 7%;
+  }
+  .textColumn{
+  	-webkit-column-count: 0;
+    -moz-column-count: 0;
+    column-count: 0;
+  	-webkit-column-gap: 0;
+    -moz-column-gap: 0;
+    column-gap: 0;
+  }
+  input[type="text"], input[type="email"] {
+    width: 100%;
+  }
+  .contact {
+  margin: 0 7%;
+  }
+ }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  h1 {
+    font-size: 3.8em;
+  }
+  p {
+    font-size: 1em;
+  }
+  .hometop{
+    background-position: right center;
+    background-size: cover;
+  }
+  .thirty{
+    height: 100vh;
+    background-position: center center;
+  }
+  .seventy{
+  	padding-left: 5%;
+  }
+  .textColumn{
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+  	-webkit-column-gap: 40px;
+    -moz-column-gap: 40px;
+    column-gap: 40px;
+  }
+  .contact {
+  margin: 0 15%;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  h1 {
+    font-size: 3.8em;
+  }
+  p {
+    font-size: 1.125em;
+  }
+  .hometop{
+    background-position: center center;
+    background-size: 100% auto;
+  }
+  .contact {
+  margin: 0 25%;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  h1 {
+    font-size: 4em;
+  }
+  h2 {
+    font-size: 2.8em;
+  }
+  h3 {
+    font-size: 2.25em;
+  }
+  h4 {
+    font-size: 1.875em;
+  }
+  h5 {
+    font-size: 1.5em;
+  }
+  h6 {
+    font-size: 1.3em;
+  }
+  input[type="text"], input[type="email"] {
+    width: 35%;
+  }
+}
